app/assets/stylesheets/tabs/_content_type_editor.css.sass
.content-type-editor
  @extend %entity-editor

  $inactive-row-color: $lightest-gray
  $active-row-color: darken($light-gray, 30)

  $active-row-icon-inactive-color: lighten($light-gray, 10)
  $active-row-icon-active-color: darken($active-row-icon-inactive-color, 40)

  $inactive-row-icon-inactive-color: lighten($lightest-gray, 5)
  $inactive-row-icon-active-color: darken($inactive-row-icon-inactive-color,  20)

  $vertical-padding: 10px

  // Layout, positioning
  .content-type-field-list
    width: 60%
    padding-top: 5px
    border-bottom: 1px solid $light-rule
    line-height: 18px

  // Form style inside fields
  .form-controls .content-type-field-list
    // Override styles from form.css, needs this level of specificity to override
    input[type="text"]
      display: inline
      width: auto
      margin: auto
      padding: 3px
      &[disabled]
        background-color: transparent
      &[name="fieldId"]
        border-width: 0
        +box-shadow(none)
        margin-left: 10px
        color: $active-row-color
      &[name="fieldId"]:focus
        border-width: 1px
        +box-shadow(0 1px 2px rgba(0,0,0,0.1) inset)
      &[name="fieldName"],
      &[name="fieldId"]:focus
        color: $active-row-icon-active-color
        background: white
      &[name="fieldId"]:hover
        border-width: 1px
      &[name="fieldId"][disabled]:hover
        border-width: 0
      
  // Layout for Field-row
  .cf-field-settings
    @extend %result-list-cell
    color: $inactive-row-color
    position: relative
    overflow: visible
    padding-left: 13px
    padding-top: $vertical-padding
    padding-bottom: $vertical-padding
    border-top: 1px solid $light-rule
    +legacy-pie-clearfix

  // Positioning inside Field-row
  .toggle-collapse
    display: block
    float: left
  .display,
  .field-form
    float: left
    margin-left: 10px
  .icons
    position: absolute
    top: $vertical-padding
    right: 150px
  .drag-handle
    position: absolute
    +stretch(0, 20px, 0, null)
    line-height: $vertical-padding + $vertical-padding + 18px
  .display .cf-fieldtype-icon,
  button.cf-fieldtype-icon
    // external
    position: absolute
    top: 0
    right: 70px
    margin-top: 7px
  .fieldtype-dropdown
    position: static
  .status
    position: absolute
    top: 0
    right: 0
    height: $vertical-padding + $vertical-padding + 18px
    width: 6px

  // Field settings Look and Feel
  .cf-field-settings
    background-color: white
    &:hover
      background-color: $result-list-highlight
      cursor: pointer
    &.open:hover
      cursor: auto
      background-color: $gray-background
  .toggle-collapse
    color: $inactive-row-icon-inactive-color

  // Open/closed Display-state visibility
  .field-form,
  .field-details,
  .fieldtype-dropdown
    display: none
  .cf-field-settings.open
    .field-form,
    .field-details,
    .fieldtype-dropdown
      display: block
    .display
      display: none

  // Visual position adjustment for field form
  .field-form
    margin-top: -4px
    margin-bottom: 7px

  .field-errors
    color: $red
    font-size: 0.8em
    

  // Drag Handle Look and Feel
  .drag-handle
    cursor: move
    cursor: -webkit-grabbing
    cursor: -moz-grab
    cursor: -moz-grabbing
    opacity: 0.2
  .cf-field-settings:hover .drag-handle
    opacity: 1

  // Colored Status-Bar at the end of the row
  .status
    &.published
      background-color: $green
    &.disabled
      background-color: $gold
    &.unpublished
      background-color: $blue

  // Icons
  .icons
    color: $inactive-row-icon-inactive-color
    .ss-test,
    .ss-check,
    .ss-globe,
    .required-icon
      padding-left: 3px
    .enabled
      color: $inactive-row-icon-active-color
  .required-icon
    font-style: normal
    font-size: 120%
  .cf-fieldtype-icon
    strong
      color: inherit
    // Adjust the color because <strong> makes the text appear darker
    color: $inactive-row-color
  .validation-alert
    color: $red
      
  // Fieldtype icon
  .cf-fieldtype-icon
    // Look / internal
    cursor: default
    border: 1px solid $inactive-row-color
    +border-radius(3px)
    height: 18px + 2 * 3px
    line-height: 18px
    padding: 3px 0
    width: 35px
    text-align: center
    i
      position: relative
      top: 1px
  button.cf-fieldtype-icon:not([disabled])
    width: 45px
    padding-left: 13px
    cursor: pointer
    &:before
      content: '▼'
      font-size: 0.8em
      position: absolute
      left: 3px

  // Color variations for active fields
  .active
    color: $active-row-color
  .active .icons
    color: $active-row-icon-inactive-color
    .enabled
      color: $active-row-icon-active-color
  .active .cf-fieldtype-icon
    color: lighten($active-row-color, 10)
    border-color: $active-row-color

  // Color varaitions for open fields
  .open
    background-color: $gray-background
    color: $active-row-color
  .open .icons
    color: $active-row-icon-inactive-color
    .enabled
      color: $active-row-icon-active-color
  .open .cf-fieldtype-icon
    color: lighten($active-row-color, 10)

  // Toggles
  .field-details a
    color: darken($active-row-icon-inactive-color, 10)
    &:hover
      color: darken($active-row-icon-inactive-color, 30)
  .toggle-required,
  .toggle-validate,
  .toggle-localized,
  .toggle-title,
  .toggle-disabled
    cursor: pointer
    padding-right: 20px
  .field-details a.active
    color: $active-row-icon-active-color
    &:hover
      color: darken($active-row-icon-inactive-color, 30)
  .toggle-disabled
    display: block
    padding-right: 50px
    float: right
  .field-details
    .ss-check,
    .ss-globe,
    .ss-text
      position: relative
      top: 1px
    text-transform: uppercase
    font-size: 11px
    clear: both
    border-top: 1px solid $dark-rule
    padding-top: $vertical-padding
    padding-left: 25px

  // Advice/Add-Button
  .advice
    width: 60%
    margin: 0
  .add-field-button
    margin-top: 1em

  .type-menu
    width: 500px
    white-space: normal
    padding: 0
    ul
      margin: 0 300px 0 0
      border-right: 1px solid $lightest-gray
    li:first-child
      +border-radius(3px 0 0 0)
    li:last-child
      +border-radius(0 0 0 3px)
    .content-type-description
      position: absolute
      color: $light-gray
      display: none
      left: 200px
      top: 0
      bottom: 0
      padding: 20px 40px 10px 10px
      p
        padding: 0
      img
        position: absolute
        bottom: 90px
    li:hover
      .content-type-description
        display: block
    li.group h3
      margin-top: 8px
      margin-bottom: 0
    li.group:hover
      background: white
      cursor: default
    li.type
      padding-left: 20px
    .cf-fieldtype-icon
      font-size: 12px
      margin-right: 5px
      float: left
    li:hover .cf-fieldtype-icon
      color: white
      border-color: white

